--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <div id="result">
         <!-- This is where the result will be-->
       </div>
-      <button id="number-submit" class="btn btn-lg btn-secondary" type="button">
+      <button id="number-submit" class="btn btn-lg btn-secondary" type="button" onclick="playgame()">
         Check Me
       </button>
-      <button id="restart-game" class="btn btn-lg btn-light" type="button">
+      <button id="restart-game" class="btn btn-lg btn-light" type="button" onclick="restartgame()">
         Restart
       </button>
 
