--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="image/c.png" >
 
     <title>GuessTheNum</title>
   </head>
@@ -30,8 +31,8 @@
       </div>
     </nav>
     <main>
-      <h1 class="banner p-3 m-4">1.2.3.</h1>
-      <div class="form-group m-4">
+      <h1 class="banner p-3 m-3">1.2.3.</h1>
+      <div class="form-group m-3">
         <input
           type="number"
           class="form-control form-control-lg"
@@ -47,6 +48,9 @@
       </button>
       <button id="restart-game" class="btn btn-lg btn-light" type="button" >
         Restart
+      </button>
+      <button id="hint" class="btn btn-lg btn-light" type="button" >
+        Hint
       </button>
 
       <div id="history">
